# metanno

./: .babelrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  galata_config.py  install.json  jupyter_server_test_config.py  metanno_transcrypt  mkdocs.yml  package.json  playwright.config.js  playwright.config.ts  postBuild  pyproject.toml  requirements.txt  setup.py  tsconfig.json  versions.json  webpack.config.js
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: delete-preview-docs.yml  docs.yml  release.yml  test-build.yml  tests.yml
binder/: start  workspace.json
client/: dist-globals.ts  index.ts  plugin.ts  style.css  types.ts
client/components/: index.ts
client/utils/: arrayEquals.ts  currentEvent.ts  hooks.ts  index.ts  keyboard.ts  memoize.ts  reconcile.ts  replaceObject.ts  textRange.ts
config/: client_env.js  webpack.config.js
doc/: README.md
docs/: index.md  installation.md
docs/components/: annotated-image.md  annotated-text.md  image-component.md  index.md  table-component.md  table.md  text-component.md
docs/demos/: index.md  quaero-explorer.md
docs/tutorials/: customize-explorer.md  index.md  multi-collections.ipynb  new-project.md  pre-annotation.ipynb  run-quaero-explorer.ipynb  run-quaero-explorer.md
examples/: Annotator.ipynb  NewApp.ipynb  Simple.ipynb  brat.py  quaero.py  test.py
examples/dataset/: doc-1.ann  doc-1.txt  doc-2.ann  doc-2.txt
latest/: index.html  objects.inv
latest/assets/: 33.2d2359cc215bab34838a.js  611.71a838c81b6d20c658f5.js  859.1cf577429da4f88344bf.js  bundle.042d6262411c7df98b96.pkl  bundle.0525a4a1afae3558bee6.pkl  bundle.0678d286ad38ad111c44.pkl  bundle.0dd3454b7640698082e1.pkl  bundle.0e19f65c2e9d2e7c337b.pkl  bundle.1532deb4b7a8f9c4d331.pkl  bundle.272944bcbaa0eb76d81e.pkl  bundle.2e5ebcb5e024d09bd5a3.pkl  bundle.3766ed68e9e081026c97.pkl  bundle.3b2fe8d0d4c58bb835ae.pkl  bundle.4bf6516e1f2b6f8f59ab.pkl  bundle.4de983c89f1b5efbceee.pkl  bundle.5402d201398bb772233e.pkl  bundle.5aa2e9e1021340a5cc17.pkl  bundle.5adef756513f17553608.pkl  bundle.5f28e12678508d88bec3.pkl  bundle.79ab662906f6c5507f71.pkl  bundle.7fc2d9485ebe2d16ad6c.pkl  bundle.80c4905c803e71f1989b.pkl  bundle.8f5cbdb71339829e2d7a.pkl  bundle.90c012c0dc51fd7915d2.pkl  bundle.910acef9c478cacd9880.pkl  bundle.9342448f5bcaedac4fc5.pkl  bundle.9462112c06497ecf8181.pkl  bundle.a3416e0b7bf6d2b555d9.pkl  bundle.a75d400c790bd68bbf4c.js  bundle.b09bd0a8ca8bcc1ea207.pkl  bundle.b224ef611a4b76b07a6a.pkl  bundle.b8c0179388375f65e4ba.pkl  bundle.be070d7e91b2d5b4d1c0.pkl  bundle.cc7d7c8025f4c0179cae.pkl  bundle.ccd348250fd8a59c37f8.pkl  bundle.cd42b27dee41531b85f9.pkl  bundle.cfc4b15d116b24e6f71e.pkl  bundle.d1201b687d73b555cbf2.pkl  bundle.da5e02d018744bec5661.pkl  bundle.deffb21f5f775695075c.pkl  (+61 more)
latest/changelog/: index.html
latest/components/: index.html
latest/demos/: index.html
latest/first-app/: index.html
latest/installation/: index.html
latest/search/: search_index.json
latest/state/: index.html
latest/text-annotator/: index.html
latest/tutorials/: index.html
main/: 404.html  index.html  notebook.css  objects.inv
main/assets/: 214.b4d0cfa38b36cb2c50b3.js  214.b54995b543209aa6f1cb.js  214.efaa94ddefa3978771e5.js  293.2f683412fdbfb557b232.js  33.1e2a70c14e5db1cc563d.js  33.53f5e3ecdcb5899344ab.js  339.76ae9b20fc15adbf94a7.js  38.345d3c84063487ff6b9a.js  38.f6826804b30e2021cc9f.js  436.ed53338b8dc4b0e5ba6e.js  443.d6535ee45ac3dceae37a.js  533.77b0e946ae6c7fd0e628.js  577.57c28e69641a22688c4b.js  577.8b0cd848cf784f528c36.js  666.8306911d1e0834711dfb.js  674.ca9682ddd89856cbc427.js  81.7431b6e1d78d8737c2bd.js  81.8c0a5bb6f6f6181a2efe.js  848.0dd00f09c6e597805437.js  848.bdb3cae6ac4fb5c2eb69.js  859.c4c2ae56a05af807facb.js  982.c8103f6d132d43c8db6d.js  bundle.021eb08e9450e50c8fb5.pkl  bundle.089d5641d9d0fa64c778.cbor  bundle.089d5641d9d0fa64c778.code.js  bundle.08d3acc41ef1a2faaa75.pkl  bundle.09f970f805388f0b61e9.pkl  bundle.0b7f069fdf292958ae5e.pkl  bundle.0c99f80a5b0ebc6492f4.pkl  bundle.0cb4a4173593e8fd9bb1.pkl  bundle.0e08392a7dbd9282773a.pkl  bundle.0e80268090c91c12e109.pkl  bundle.0e887bad2990ca248340.pkl  bundle.0f91797062817cc6df00.cbor  bundle.0f91797062817cc6df00.code.js  bundle.108a42523fcb5fb1ff4c.pkl  bundle.118342324dfc0977e22b.pkl  bundle.12d580a563d943df286e.cbor  bundle.12d580a563d943df286e.code.js  bundle.12f2e735b4aab5b27e41.pkl  (+316 more)
main/changelog/: index.html
main/components/: index.html
main/demos/: index.html
main/installation/: index.html
main/search/: search_index.json
main/tutorials/: custom-fields.ipynb  index.html  multi-collections.ipynb  new-project-bis.ipynb  run-quaero-explorer.ipynb
metanno/: Untitled.ipynb  __init__.py  base.py  brat.py  immutable.py  manager.py  py2js.py  python_to_javascript.py  state.py  types.py  ui.py  utils.py  view.py  views.py
metanno/connectors/: __init__.py  brat.py  pandas.py
metanno/recipes/: data_widget_factory.py  explorer.py  faster_ner.py  ner.py  new_ner.py
metanno/ui/: __init__.py
metanno/widgets/: __init__.py  base.py  table_widget.py  text_widget.py
playwright-report/: index.html
pret/: 404.html  index.html  objects.inv  pret.css
pret/assets/: bundle.1eb26156e8e958212eeb.pkl  bundle.25c5134e9d5e9e39320a.pkl  bundle.8eae6d436c303b6b549b.pkl  bundle.97ea4294a60487619ac2.pkl  bundle.a2561d240951b801fcee.pkl  bundle.f2c7f58d6847864272c0.pkl  client_plugin_ts.3fb568dfa80bffebc6a6.js  client_plugin_ts.3fb568dfa80bffebc6a6.js.map  (+17 more)
scripts/: build.js  start.js  test.js
src/: current_event.ts  hyperlinkPubSub.ts  immerAction.js  index.css  index.js  manager.tsx  org.transcrypt.__runtime__.js  parse.js  python.js  reconcile.js  state.ts  types.ts  unpack.tsx  utils.js  utils.tsx
tests/: ner_app.py
ui-tests/: foo.spec.ts
v1.0.0-beta.3/: index.html  objects.inv
v1.0.0-beta.4/: 404.html  index.html
v1.0.0-beta.5/: 404.html  index.html
v1.0.0-beta.6/: 404.html  index.html  objects.inv
v1.0.0-beta.7/: index.html
webpack/: webpack.jupyter.js
(+292 files in other folders)
