[project]
name = "metanno"
description = "Modular annotator building framework in Python"
authors = [
    { name = "Perceval Wajsburt", email = "perceval.wajsburt@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
urls.homepage = "https://github.com/perceval/metanno/"
urls.repository = "https://github.com/perceval/metanno/"
urls.documentation = "https://perceval.github.io/metanno/"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Widget Sets",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Mime Renderers",
]
requires-python = ">=3.7,<4.0,!=3.8.1"
dependencies = [
    "pret",
    "pret-joy",
    "pret-markdown",
    "pret-simple-dock",
]

# ----- Development configuration -----
[dependency-groups]
dev = [
    "hatchling",
    "hatch-jupyter-builder",
    "pret>=0.4.0",
]
docs = [
    "mkdocs-eds @ git+https://github.com/percevalw/mkdocs-eds.git@main#egg=mkdocs-eds",
    "pret>=0.4.0",
    "edsnlp",
]

# ----- CLI configuration -----
[project.scripts]
pret = "pret.cli:app"

# ----- Linting & Testing -----
[tool.ruff]
fix = true
exclude = [
    ".git",
    "__pycache__",
    "__init__.py",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "build",
    "pret/ui/metanno/__init__.py"
]
line-length = 88
lint.select = [
    "E",
    "F",
    "W",
    "I001"
]
lint.fixable = ["E", "F", "W", "I"]

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401"]


# ----- Build configuration -----
[tool.hatch.version]
path = "metanno/__init__.py"

[build-system]
requires = ["hatchling", "jupyterlab<4.0.0", "pip<=24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["pret/ui/metanno/js-extension/package.json"]
install-pre-commit-hook = true
optional-editable-build = false
build-kwargs = { "build_cmd" = "build", "npm" = ["jlpm"] }
editable-build-kwargs = { "build_cmd" = "build:dev", "npm" = ["jlpm"] }

[tool.hatch.build]
artifacts = [
    "metanno",
    "pret"
]

[tool.hatch.build.targets.wheel]
packages = [
    "pret",
    "metanno"
]

[tool.hatch.build.targets.wheel.shared-data]
"pret/ui/metanno/js-extension" = "share/jupyter/labextensions/metanno"

[tool.hatch.metadata]
allow-direct-references = true
